6.elastic_ip.tf
#  Статический ip

resource "aws_eip" "my_static_ip" {
  instance = aws_instance.webserver.id
}
